--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,6 +46,11 @@
         <item name="android:background">@drawable/edittext_background</item>
     </style>
 
+    <!-- Profile pic circle background if light mode on -->
+    <style name="PROFILE_PIC_CIRCLE">
+        <item name="android:background">@drawable/profile_pic_circle_drawable</item>
+    </style>
+
     <!-- Send message edit texts background if light mode on -->
     <style name="SEND_MESSAGE_EDIT_TEXT">
         <item name="android:background">@drawable/send_message_edit_text</item>
