--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -63,88 +63,6 @@
             app:srcCompat="@drawable/ic_logout" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:id="@+id/tvContactName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:text="Daniel Cohen Shor"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="end">
-
-                    <TextView
-                        android:id="@+id/tvTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="10dp"
-                        android:text="10:53"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-            </TableRow>
-
-        </TableLayout>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/contactImg"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/picture1"
-            app:civ_border_color="@color/black"
-            android:layout_marginStart="5dp"/>
-
-        <TextView
-            android:id="@+id/tvLastMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="80dp"
-            android:text="Hey! What's up?"
-            android:textSize="15sp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="8dp">
-
-            <TextView
-                android:id="@+id/tvNotification"
-                android:text="2"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_gravity="center"
-                android:background="@drawable/notification_circle"/>
-        </LinearLayout>
-    </FrameLayout>
-
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddContact"
         android:layout_width="wrap_content"
@@ -173,8 +91,8 @@
 
     </FrameLayout>
 
-    <ListView
-        android:id="@+id/listViewContacts"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewContacts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
