--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -77,8 +77,8 @@
         app:srcCompat="@drawable/ic_add_contact"
         app:tint="@android:color/white" />
 
-    <ListView
-        android:id="@+id/listViewContacts"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewContacts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
