--- a/app/src/main/res/layout/activity_add_new_contact.xml
+++ b/app/src/main/res/layout/activity_add_new_contact.xml
@@ -58,7 +58,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/linearLayout2">
 
             <EditText
                 android:id="@+id/etChooseContact"
