--- a/app/src/main/res/layout/contact.xml
+++ b/app/src/main/res/layout/contact.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingBottom="10dp">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -24,8 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="60dp"
-                    android:text="Daniel Cohen Shor"
-                    android:textColor="@color/black"
+                    style="@style/TEXT"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -41,7 +41,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginEnd="10dp"
-                        android:text="10:53"
+                        style="@style/TEXT"
                         android:textSize="15sp" />
 
                 </LinearLayout>
@@ -54,7 +54,6 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
-            android:src="@drawable/picture1"
             app:civ_border_color="@color/black" />
 
         <TextView
@@ -62,8 +61,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginStart="80dp"
-            android:text="Hey! What's up?"
+            android:layout_marginStart="60dp"
+            android:text=""
+            style="@style/TEXT"
             android:textSize="15sp" />
 
         <LinearLayout
@@ -78,10 +78,8 @@
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_gravity="center"
-                android:background="@drawable/notification_circle"
-                android:gravity="center"
-                android:text="2"
-                android:textColor="@color/white" />
+                style="@style/NOTIFICATION"
+                android:gravity="center" />
         </LinearLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
