--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,7 +55,7 @@
                 android:paddingVertical="30dp"
                 android:layout_gravity="center">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <ImageView
                     android:id="@+id/riProfilePic"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
