--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -83,5 +83,8 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        style="@style/BLOCK_SCREEN_WITH_STATUS_BAR"/>
+        style="@style/BLOCK_SCREEN_WITH_STATUS_BAR"
+        android:paddingTop="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
