--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.STF" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Status bar color. -->
@@ -97,5 +97,10 @@
     <!-- my message bubble background if dark mode on -->
     <style name="MY_BUBBLE">
         <item name="android:background">@drawable/my_text_bubble_dark_drawable</item>
+    </style>
+
+    <!-- Profile pic circle border if light mode on -->
+    <style name="PROFILE_PIC_BORDER">
+        <item name="android:background">@drawable/circle_border_dark</item>
     </style>
 </resources>
