--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,18 +33,16 @@
             android:id="@+id/contactImg"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:src="@drawable/picture1"
             app:civ_border_color="@color/black"
             android:layout_marginStart="10dp"/>
 
         <TextView
-            android:id="@+id/tvHeadline"
+            android:id="@+id/tvContactName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
-            android:text="Daniel Cohen Shor"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
