--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -103,4 +103,9 @@
     <style name="PROFILE_PIC_BORDER">
         <item name="android:background">@drawable/circle_border_dark</item>
     </style>
+
+    <style name="INVALID_EDIT_TEXT">
+        <item name="android:background">@drawable/invalid_edit_text_dark</item>
+    </style>
+
 </resources>
