--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -4,16 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/tvDate"
+        style="@style/DATE_BUBBLE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         style="@style/MY_BUBBLE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:minWidth="150dp"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:minWidth="150dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvDate"
         android:layout_marginTop="10dp">
 
         <TextView
