make send message work

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -67,7 +67,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/SEND_MESSAGE_EDIT_TEXT_BACKGROUND">
+        style="@style/SEND_MESSAGE_EDIT_TEXT_BACKGROUND"
+        android:paddingTop="10dp">
 
         <EditText
             android:id="@+id/etSendMessage"
