--- a/app/src/main/res/layout/contact_message.xml
+++ b/app/src/main/res/layout/contact_message.xml
@@ -13,7 +13,8 @@
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"/>
 
     <LinearLayout
         style="@style/CONTACT_BUBBLE"
