--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <RelativeLayout
-            android:id="@+id/relativeLayout"
+            android:id="@+id/llCurrentUserInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
