--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,11 @@
         <item name="android:background">@drawable/rounded_block_screen_drawable</item>
     </style>
 
+    <!-- Settings icon in login screen background if light mode on -->
+    <style name="LOGIN_SETTINGS">
+        <item name="android:background">@drawable/login_screen_settings</item>
+    </style>
+
     <!-- Headline texts background if light mode on -->
     <style name="HEADLINE_TEXT">
         <item name="android:textColor">@color/blue_shade_2</item>
