--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -104,8 +104,8 @@
         <item name="android:background">@drawable/circle_border_dark</item>
     </style>
 
+    <!-- Edit text border if light mode on -->
     <style name="INVALID_EDIT_TEXT">
         <item name="android:background">@drawable/invalid_edit_text_dark</item>
     </style>
-
 </resources>
