--- a/app/src/main/res/layout/activity_change_api.xml
+++ b/app/src/main/res/layout/activity_change_api.xml
@@ -61,20 +61,27 @@
             android:orientation="vertical"
             android:id="@+id/linearLayout2">
 
-            <EditText
-                android:id="@+id/etChangeApi"
-                style="@style/EDIT_TEXT"
-                android:layout_width="350dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:autofillHints="username"
-                android:drawableStart="@drawable/server_icon_drawable"
-                android:drawablePadding="8dp"
-                android:ems="10"
-                android:hint="@string/ed_insert_server_address"
-                android:inputType="text"
-                android:minHeight="48dp" />
+                android:orientation="vertical"
+                android:id="@+id/linearLayout3">
+
+                <EditText
+                    android:id="@+id/etChangeApi"
+                    style="@style/EDIT_TEXT"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:autofillHints="username"
+                    android:drawableStart="@drawable/server_icon_drawable"
+                    android:drawablePadding="8dp"
+                    android:ems="10"
+                    android:hint="@string/ed_insert_server_address"
+                    android:inputType="text"
+                    android:minHeight="48dp" />
+            </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnChangeApi"
