--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,41 +47,32 @@
                 android:textStyle="bold"
                 android:layout_marginTop="30dp" />
 
-            <LinearLayout
-                android:id="@+id/ll_ProfilePic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            <FrameLayout
+                android:id="@+id/fl_profilePic"
+                android:layout_width="260dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:paddingVertical="30dp">
 
-                <FrameLayout
-                    android:id="@+id/fl_profilePic"
-                    android:layout_width="260dp"
-                    android:layout_height="match_parent"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/riProfilePic"
+                    style="@style/PROFILE_PIC_CIRCLE"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:paddingVertical="30dp">
+                    android:scaleType="centerCrop"
+                    app:riv_oval="true" />
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/riProfilePic"
-                        style="@style/PROFILE_PIC_CIRCLE"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_gravity="center"
-                        android:scaleType="centerCrop"
-                        app:riv_oval="true" />
+                <TextView
+                    android:id="@+id/et_ProfilePic"
+                    style="@style/TEXT"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_add_profile_picture" />
 
-                    <TextView
-                        android:id="@+id/et_ProfilePic"
-                        style="@style/TEXT"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/tv_add_profile_picture" />
-
-                </FrameLayout>
-
-            </LinearLayout>
-
+            </FrameLayout>
 
             <LinearLayout
                 android:id="@+id/ll_username"
@@ -112,7 +103,8 @@
                     android:ems="10"
                     android:hint="@string/et_username"
                     android:inputType="text"
-                    android:minHeight="48dp" />
+                    android:minHeight="48dp"
+                    android:paddingEnd="10dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -148,7 +140,8 @@
                         android:ems="10"
                         android:hint="@string/et_password"
                         android:inputType="textPassword"
-                        android:minHeight="48dp" />
+                        android:minHeight="48dp"
+                        android:paddingEnd="40dp"/>
 
                     <ImageButton
                         android:id="@+id/btnShowPassword"
@@ -194,7 +187,8 @@
                         android:ems="10"
                         android:hint="@string/et_confirm_password"
                         android:inputType="textPassword"
-                        android:minHeight="48dp" />
+                        android:minHeight="48dp"
+                        android:paddingEnd="40dp"/>
 
                     <ImageButton
                         android:id="@+id/btnShowConfirmationPassword"
@@ -237,7 +231,8 @@
                     android:ems="10"
                     android:hint="@string/et_display_name"
                     android:inputType="text"
-                    android:minHeight="48dp" />
+                    android:minHeight="48dp"
+                    android:paddingEnd="10dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -272,7 +267,6 @@
                     android:layout_marginStart="3dp"
                     style="@style/TEXT"/>
             </LinearLayout>
-
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnRegister"
